<resources>
    <string name="app_name" translatable="false">AxelMeli</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="value_suggestion" translatable="false">$0</string>

    <string name="button_next">Next</string>
    <string name="value">Value: </string>
    <string name="method">Method: </string>
    <string name="provider">Provider: </string>
    <string name="installments">Installments: </string>

    <string name="input_value_title">Please enter an amount for the payment</string>
    <string name="select_payment_method">Select your desired payment method</string>
    <string name="select_provider">Select your bank</string>
    <string name="select_installment_amount">Choose the amount of installments</string>

    <string name="fail_method">There was an error recovering the payment methods. Try again later.</string>
    <string name="fail_provider">There was an error recovering the bank information. Try again later.</string>
    <string name="fail_installment">There was an error recovering the installments data. Try again later.</string>

    <string name="no_data">There is no information</string>

    <plurals name="installment_dialog_info">
        <item quantity="one">In %d installment.</item>
        <item quantity="other">In %d installments.</item>
    </plurals>

</resources>
