<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ValueInputActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/input_value_title"
        android:textColor="@color/colorTrueBlack"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toTopOf="@id/input_value_edit_text"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_top" />

    <EditText
        android:id="@+id/input_value_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/value_suggestion"
        android:inputType="numberDecimal"
        android:digits="0123456789.,$"
        android:textColor="@color/colorTrueBlack"
        android:textSize="@dimen/value_size"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/input_value_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:enabled="false"
        android:text="@string/button_next"
        android:textColor="@color/colorTrueBlack"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95" />


</androidx.constraintlayout.widget.ConstraintLayout>